--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="c:\Users\Administrator\Desktop\mypotfolio\images\WhatsApp Image 2025-01-24 at 09.49.20_83f33d5a.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images\WhatsApp Image 2025-01-24 at 09.49.20_83f33d5a.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">MUNENE NELSON LEWIS NEPSEA</a></h1>
 					<p>An IT master, jourmalist and an aviation student<br />
 					but  now I'm totally crazy</p>
@@ -47,7 +47,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="c:\Users\Administrator\Desktop\mypotfolio\images\banner (2).jpg" alt="" />
+									<img src="images\banner (2).jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -88,7 +88,7 @@
 									</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="c:\Users\Administrator\Desktop\mypotfolio\images\WhatsApp Image 2025-01-24 at 09.49.23_5589df4d.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2025-01-24 at 09.49.23_5589df4d.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>joining a flight school </h4>
 												<p>Sooner or later i will be captain Nepsea 
@@ -98,7 +98,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="c:\Users\Administrator\Desktop\mypotfolio\images\WhatsApp Image 2025-01-24 at 09.49.22_ede44fc9.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2025-01-24 at 09.49.22_ede44fc9.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Best in my game </h4>
 												<p>Talking of skating and playing rollball thats me. I feel a sense of relaxation while
@@ -108,7 +108,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="c:\Users\Administrator\Desktop\mypotfolio\images\WhatsApp Image 2025-01-24 at 09.49.23_5589df4d.jpg" 
+											<a href="#" class="image"><img src="images\WhatsApp Image 2025-01-24 at 09.49.23_5589df4d.jpg" 
 										
 												alt="" style="width: 300px; height: 200px; object-fit: cover;"/></a>
 											<div class="inner">
