--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<header class="major">
 										<h2>Who is Nepsea</h2>
 										<p>Just an incredibly simple person driven by motives<br />
-										its all about  <a href="http://html5up.net">ME</a>.</p>
+										its all about  ME.</p>
 									</header>
 									<p>I had a smooth life untill 2022 when i decided to make an impact in my life .I was brought up technologically so adapting to IT was not a 
 										problem. Got my IT cert in 2024 and journalism cert coming on 2025. Aviation was my dream career and am glad 
