--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter <a href="https://www.instagram.com/munene_nl/?__pwa=1#"></a>
+  </span></a></li>
+						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook<a href="https://www.instagram.com/munene_nl/?__pwa=1#"></a>
+ </span></a></li>
+						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram <a href="https://www.instagram.com/munene_nl/?__pwa=1#"></a>
+</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">Githu<a href="https://www.example.com"></a>
+ b</span></a></li>
+						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email <a href="lewisnepsea@gmail.com"></a>
+</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -481,7 +486,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Nepsea. All rights reserved.</li><li>Design: <a href="http://html5up.net">devnepsea</a></li>
+								<li>&copy; Nepsea. All rights reserved.</li><li>Design: devnepsea</li>
 							</ul>
 						</div>
 					</section>
