--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 				<header>
 					<span class="image avatar"><img src="images\WhatsApp Image 2025-01-24 at 09.49.20_83f33d5a.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">MUNENE NELSON LEWIS NEPSEA</a></h1>
-					<p>An IT master, jourmalist and an aviation student<br />
-					but  now I'm totally crazy</p>
+					<p>I am a tech-savvy media professional with expertise in IT, website design, online editing, reporting, anchoring,<br>
+						and scriptwriting. With a background in Mass Media and Communication from Mount Kenya University,<br> I blend technology and storytelling to create impactful digital experiences.
+
+I have developed projects ranging from WiFi billing systems and investment platforms to hospital cloud systems and AI-focused documentaries. Passionate about innovation, I aim to enhance digital solutions, media production, and content creation.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -56,13 +58,17 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Who is Nepsea</h2>
-										<p>Just an incredibly simple person driven by motives<br />
-										its all about  ME.</p>
+										<h2>Who is Munene Nelson Lewis Nepsea</h2>
+										<p>incredible IT personel and a journalist at large <br />
+										a future pilot. working hard and creativity is my motive.</p>
 									</header>
-									<p>I had a smooth life untill 2022 when i decided to make an impact in my life .I was brought up technologically so adapting to IT was not a 
-										problem. Got my IT cert in 2024 and journalism cert coming on 2025. Aviation was my dream career and am glad 
-										my parents have supported my dream of becoming a pilot. currently i am a student pilot in proactive flihgt school
+									<p>Welcome to my digital space! I'm Nelson Lewis Munene, a passionate IT specialist, website designer, and media professional with a strong background in mass media, communication, and online content creation.
+
+With expertise in website development, online editing, sound engineering, scriptwriting, and headline crafting, I bring creativity and technical skills together to deliver engaging digital experiences. Whether it's building websites, editing content, reporting, hosting, or anchoring, I strive to create impactful and professional results.
+
+Currently, I am looking for opportunities in IT, media, and digital content creation, while also working on projects like WiFi billing systems, investment platforms, hospital cloud systems, and AI-focused documentaries. My goal is to blend technology with storytelling to create meaningful and efficient solutions.
+
+Let's connect and bring great ideas to life!
 									</p>
 								</div>
 							</section>
@@ -96,9 +102,12 @@
 											<a href="#" class="image"><img src="images\WhatsApp Image 2025-01-24 at 09.49.23_5589df4d.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>joining a flight school </h4>
-												<p>Sooner or later i will be captain Nepsea 
-													and i will be cruising in a 200 knots per hour.
-													viewing the beutiful senaries of the world.
+											<p>I am an aviation enthusiast and Private Pilot License (PPL) trainee, blending my passion for flying with expertise in IT, media, and digital content creation. With a background in Mass Media and Communication, I specialize in aviation storytelling, digital aviation platforms, and aerospace technology integration.
+
+My skills in website design, online editing, reporting, and scriptwriting allow me to communicate complex aviation concepts effectively. I am particularly interested in aviation safety, air traffic technology, and the role of AI in the future of flight.
+
+Currently training to become a licensed pilot, I aim to merge my aviation knowledge with IT solutions to enhance the industry. Let’s connect and explore the limitless possibilities in aviation!
+				
 												</p>
 											</div>
 										</article>
@@ -106,9 +115,11 @@
 											<a href="#" class="image"><img src="images\WhatsApp Image 2025-01-24 at 09.49.22_ede44fc9.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Best in my game </h4>
-												<p>Talking of skating and playing rollball thats me. I feel a sense of relaxation while
-													playing the game i love most. I play for the national team , also a captain for the Mount Kenya Univesirty
-													rollball team.
+												<p>I am a passionate Rollball player and Mount Kenya  team captain, with a strong background in competitive sports and leadership. I have led my team to victory in Rollball tournaments at Kenyatta University (KU) and continue to push my limits in the sport.
+
+Being a team captain has honed my strategic thinking, teamwork, and leadership skills, allowing me to excel both on and off the court. Rollball has taught me the value of discipline, resilience, and sportsmanship, qualities I carry into every aspect of my life.
+
+I am always looking for opportunities to grow in the sport, whether through competitions, coaching, or promoting Rollball to new audiences. Let’s connect and keep the game rolling since work without play makes Tom a dull boy!
 												</p>
 											</div>
 										</article>
@@ -118,8 +129,12 @@
 												alt="" style="width: 300px; height: 200px; object-fit: cover;"/></a>
 											<div class="inner">
 												<h4>A successful developer </h4>
-												<p>born a programmer with the neccesary iq to grasp and understand the codes. Want a developer dont look any futher 
-													am here. 
+												<p>
+I am a passionate and innovative developer with expertise in IT, website design, and software solutions. My journey in development has led me to build WiFi billing systems, investment platforms, hospital cloud systems, and edge computing solutions that enhance digital efficiency and security.
+
+With a strong foundation in backend and frontend development, I strive to create user-friendly, scalable, and impactful applications. My goal is to integrate technology, business, and media to solve real-world challenges.
+
+Driven by continuous learning and problem-solving, I am always exploring new technologies, programming languages, and emerging trends to stay ahead in the field. Let’s connect and bring innovative ideas to life!
 												</p>
 											</div>
 										</article>
@@ -131,7 +146,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Who wouldnt like to talk with me ..... send me a message</p>
+									<p>For business and recomendations or any enquiry ..... send me a message</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -486,7 +501,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Nepsea. All rights reserved.</li><li>Design: devnepsea</li>
+								<li>&copy; Munene. All rights reserved.</li><li>Design: Nelson lewis</li>
 							</ul>
 						</div>
 					</section>
